--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,13 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@fastify/busboy": "^3.2.0",
     "cors": "^2.8.5",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
-    "googleapis": "^170.0.0",    
-    "pdf-lib": "^1.17.1",
-    "@fastify/busboy": "^3.2.0"
+    "googleapis": "^170.0.0",
+    "nodemailer": "^7.0.12",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
